PyQuest/src/test/parsing/valid/test011.ql
// Form with computed question
form label {
  "Question?"
    var: boolean = false
}