PyQuest/src/test/parsing/invalid/test020.ql
form label {
    if (1 + 2) {
        "Question?"
        id : boolean
    }
}